# repo-explorer

./: .gitignore  AGENTS.md  main.py  pyproject.toml
backend/: agent_instructions.md  agent_prompt.md  app.py
backend/ai/: agents.py  event_stream.py  service.py
backend/ai/tools/: __init__.py  _common.py  ask_rag.py  glob.py  list_files.py  models.py  read_file.py  search_code.py
backend/api/: config.py  database.py  deps.py  routes.py  schemas.py
backend/api/database/: __init__.py  manager.py
backend/repositories/: changes_detector.py  explore_repo_service.py
backend/vectors/: embedder.py  reranker.py  store.py  test_embedder.py
backend/vectors/models/: __init__.py  chunk.py
frontend/: app.py
frontend/components/: repo_chooser.py  text_area.py
frontend/services/: repo_validation.py
frontend/styles/: main.tcss
