[project]
name = "repo-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb>=1.5.5",
    "fastapi[standard]>=0.135.2",
    "pydantic-ai>=0.0.30",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.48",
    "textual>=8.2.1",
]

[dependency-groups]
dev = [
    "ipython>=9.12.0",
]
